fix: fixed bug with text being too long

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,7 @@ footer {
 .image-display {
   padding: 0.5rem 0 0 0;
   margin: 1rem 0 0 0;
+  word-wrap: break-word;
 }
 
 /* image title/author title */
@@ -135,6 +136,7 @@ footer {
 .comment-display {
   background-color: #e9e9e9;
   padding: 1rem;
+  word-wrap: break-word;
 }
 
 /* style of each comment */
@@ -154,11 +156,11 @@ footer {
 
 /* author and date alignment */
 .author {
-  flex-grow: 1;
+  width: 50%;
   text-align: left;
 }
 .date {
-  flex-grow: 1;
+  width: 50%;
   text-align: right;
 }
 
